fix align top sessioni

--- a/sites/all/themes/dday/css/dday.less
+++ b/sites/all/themes/dday/css/dday.less
@@ -1971,7 +1971,6 @@ font-weight:normal;
                    background:none;
                    display:table-cell;
                    background-repeat:no-repeat;
-                   vertical-align:top;
 
                 }
             }
